[tool.poetry]
name = "python-semver-range-preservation"
version = "0.1.0"
description = ""
authors = ["Ryan Causey <ryan.causey@munipal.io>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
